--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ladle/react": "^5.0.1",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tailwindcss/vite": "^4.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
